sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_depart_missing/errors.duarouter
Error: Attribute 'depart' is missing in definition of a vehicle.
Error: Attribute 'depart' is missing in definition of vehicle '1'.
Quitting (on error).
